kube/kustomize/overlays/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: inventory-backend.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-backend-service
                port:
                  name: app-port
